feat: major architectural enhancement and business logic improvement
🏗️ Architecture Restructuring:
- Move all enums to dedicated 'enums' package for better organization
- Relocate data initialization services to 'data' package
- Create dedicated AdminController and TeacherController for role-based access
- Add TranscriptService and repository for academic record management

📊 Enum Package Organization:
- Move AppRole, AssessmentType, RequestStatus to model/enums
- Relocate StudentCycle, StudentLevel, TranscriptStatus to enums package
- Improve code structure and maintainability with proper enum organization

🎮 Controller Layer Enhancement:
- Add AdminController with admin-specific operations
- Create TeacherController for teacher role management
- Simplify existing controllers by removing redundant code
- Improve REST endpoint organization and response handling

💾 Service Layer Expansion:
- Add TeacherService with comprehensive teacher management
- Create TranscriptService for academic transcript operations
- Move GradeCalculator from service to util package for better structure
- Enhance service implementations with improved business logic

🗄️ Repository Enhancements:
- Add ExamRepository for exam management
- Create TranscriptRepository for transcript data access
- Improve existing repositories with additional query methods
- Add custom queries for complex data retrieval operations

📋 DTO & Model Refinements:
- Rename ExamPeriod → Exam for clearer naming
- Remove deprecated UserProfileRequest DTO
- Add MessageResponse for standardized API responses
- Update model relationships and validation annotations

🛠️ Business Logic Improvements:
- Enhance grade calculation utilities with better algorithms
- Improve revendication (grade claim) processing workflow
- Add comprehensive data validation and error handling
- Optimize database queries and transaction management

🧹 Code Quality Enhancements:
- Remove deprecated services: EmailService, AdminInitializer
- Clean up un