@@ -1,7 +1,7 @@
 package com.university.ManageNotes.service.impl;
 
+import com.university.ManageNotes.config.AppConstant;
 import com.university.ManageNotes.dto.Request.DepartmentRequest;
-import com.university.ManageNotes.dto.Request.SubjectRequest;
 import com.university.ManageNotes.dto.Response.DepartmentResponse;
 import com.university.ManageNotes.dto.Response.SubjectResponse;
 import com.university.ManageNotes.exception.APIException;
@@ -18,7 +18,9 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -31,79 +33,128 @@ public class DepartmentServiceImpl implements DepartmentService {
     private final ModelMapper modelMapper;
 
     @Override
+    @Transactional
     public DepartmentRequest createDepartment(DepartmentRequest request) {
-       Department department = modelMapper.map(request, Department.class);
+        // Map DTO to Entity
+        Department department = modelMapper.map(request, Department.class);
 
-       Department departmentDb= this.departmentRepository.findByDepartmentName(department.getDepartmentName());
+        // Check if department name already exists
+        if (departmentRepository.existsByDepartmentName(department.getDepartmentName())) {
+            throw new APIException("Department with name '" + department.getDepartmentName() + "' already exists");
+        }
 
-       if(departmentDb != null){
-           throw new APIException("Department with name " + department.getDepartmentName() + " already exists !!!");
-       }
+        // Handle subjects if provided
+        if (request.getSubjectIds() != null && !request.getSubjectIds().isEmpty()) {
+            Set<Subject> subjects = new HashSet<>();
+            for (Long subjectId : request.getSubjectIds()) {
+                Subject subject = subjectRepository.findById(subjectId)
+                    .orElseThrow(() -> new ResourceNotFoundException("Subject", "id", subjectId));
+                subject.setDepartment(department);
+                subjects.add(subject);
+            }
+            department.setSubjects(subjects);
+        }
 
-        return modelMapper.map(this.departmentRepository.save(department), DepartmentRequest.class);
+        // Save and map back to DTO
+        Department savedDepartment = departmentRepository.save(department);
+        return modelMapper.map(savedDepartment, DepartmentRequest.class);
     }
 
     @Override
-    public DepartmentResponse getAllDepartments(Integer pageNumber,
-                                                      Integer pageSize,
-                                                      String sortBy, String sortOrder) {
-        Sort sortByAndOrder = sortOrder.equalsIgnoreCase("asc") ?
+    public DepartmentResponse getAllDepartments(Integer pageNumber, Integer pageSize, String sortBy, String sortOrder) {
+        Sort sortByAndOrder = sortOrder.equalsIgnoreCase(AppConstant.SORT_DIR) ?
                 Sort.by(sortBy).ascending() : Sort.by(sortBy).descending();
 
         Pageable pageable = PageRequest.of(pageNumber, pageSize, sortByAndOrder);
-
-        Page departmentPage = this.departmentRepository.findAll(pageable);
+        Page<Department> departmentPage = departmentRepository.findAll(pageable);
 
         List<Department> departments = departmentPage.getContent();
-
-        if(departments.isEmpty()){
+        if (departments.isEmpty()) {
             throw new APIException("No departments found");
         }
 
+        // Map departments to requests for content
         List<DepartmentRequest> departmentRequests = departments.stream()
-                .map(dep -> modelMapper.map(dep, DepartmentRequest.class))
-                .toList();
+                .map(dept -> modelMapper.map(dept, DepartmentRequest.class))
+                .collect(Collectors.toList());
 
-        List<Subject> subjects = this.subjectRepository.findAll();
-
-        List<SubjectRequest> subjectRequests = subjects.stream()
-                .map(sub -> modelMapper.map(sub, SubjectRequest.class))
-                .toList();
-
-        Set<Subject> subjectResponses = subjectRequests.stream()
-                .map(sub -> modelMapper.map(sub, Subject.class))
+        // Map all subjects to responses for the subjects field
+        Set<SubjectResponse> allSubjectResponses = departments.stream()
+                .flatMap(dept -> dept.getSubjects().stream())
+                .map(subject -> modelMapper.map(subject, SubjectResponse.class))
                 .collect(Collectors.toSet());
 
-        DepartmentResponse departmentResponse = new DepartmentResponse();
+        // Build response
+        DepartmentResponse response = new DepartmentResponse();
+        response.setContent(departmentRequests);
+        response.setSubjects(allSubjectResponses);
+        response.setPageNumber(departmentPage.getNumber());
+        response.setPageSize(departmentPage.getSize());
+        response.setTotalElements(departmentPage.getTotalElements());
+        response.setTotalPages(departmentPage.getTotalPages());
+        response.setLastPage(departmentPage.isLast());
 
-        departmentResponse.setContent(departmentRequests);
-        departmentResponse.setPageNumber(departmentPage.getNumber());
-        departmentResponse.setPageSize(departmentPage.getSize());
-        departmentResponse.setTotalElements(departmentPage.getTotalElements());
-        departmentResponse.setTotalPages(departmentPage.getTotalPages());
-        departmentResponse.setLastPage(departmentPage.isLast());
-        departmentResponse.setSubjects(subjectResponses);
-        return departmentResponse;
+        return response;
     }
 
     @Override
-    public DepartmentRequest updateDepartment(DepartmentRequest departmentRequest, Long departmentId){
-        Department department = modelMapper.map(departmentRequest, Department.class);
+    @Transactional
+    public DepartmentRequest updateDepartment(DepartmentRequest request, Long departmentId) {
+        // Map DTO to Entity
+        Department departmentUpdate = modelMapper.map(request, Department.class);
+        
+        Department departmentDb = departmentRepository.findById(departmentId)
+                .orElseThrow(() -> new ResourceNotFoundException("Department", "id", departmentId));
 
-        Department departmentDb = this.departmentRepository.findById(departmentId)
-                .orElseThrow(() -> new ResourceNotFoundException("Department", "departmentId", departmentId));
+        // Update department name
+        if (departmentUpdate.getDepartmentName() != null) {
+            // Check if new name already exists (excluding current department)
+            if (departmentRepository.existsByDepartmentNameAndDepartmentIdNot(
+                    departmentUpdate.getDepartmentName(), departmentId)) {
+                throw new APIException("Department with name '" + departmentUpdate.getDepartmentName() + "' already exists");
+            }
+            departmentDb.setDepartmentName(departmentUpdate.getDepartmentName());
+        }
 
-        departmentDb.setDepartmentName(department.getDepartmentName());
-        departmentDb.setSubjects(department.getSubjects());
-        return modelMapper.map(this.departmentRepository.save(departmentDb), DepartmentRequest.class);
+        // Update subjects if provided
+        if (request.getSubjectIds() != null) {
+            // Clear existing subjects
+            departmentDb.getSubjects().forEach(subject ->
+                    subject.setDepartment(null));
+            departmentDb.getSubjects().clear();
+
+            // Add new subjects
+            if (!request.getSubjectIds().isEmpty()) {
+                Set<Subject> newSubjects = new HashSet<>();
+                for (Long subjectId : request.getSubjectIds()) {
+                    Subject subject = subjectRepository.findById(subjectId)
+                        .orElseThrow(() -> new ResourceNotFoundException("Subject", "id", subjectId));
+                    subject.setDepartment(departmentDb);
+                    newSubjects.add(subject);
+                }
+                departmentDb.setSubjects(newSubjects);
+            }
+        }
+
+        // Save and map back to DTO
+        Department savedDepartment = departmentRepository.save(departmentDb);
+        return modelMapper.map(savedDepartment, DepartmentRequest.class);
     }
 
     @Override
+    @Transactional
     public DepartmentRequest deleteDepartment(Long departmentId) {
-        Department departmentToDelete = this.departmentRepository.findById(departmentId)
-                .orElseThrow(() -> new ResourceNotFoundException("Department", "departmentId", departmentId));
+        Department department = departmentRepository.findById(departmentId)
+                .orElseThrow(() -> new ResourceNotFoundException("Department", "id", departmentId));
 
-        this.departmentRepository.delete(departmentToDelete);
-        return modelMapper.map(departmentToDelete, DepartmentRequest.class);
+        // Remove department reference from subjects before deletion
+        department.getSubjects().forEach(subject
+                -> subject.setDepartment(null));
+        
+        // Map to DTO before deletion
+        DepartmentRequest deletedDepartment = modelMapper.map(department, DepartmentRequest.class);
+        departmentRepository.delete(department);
+        
+        return deletedDepartment;
     }
 }
